some minor fixes to the home blade to fix glitchy behavior on desktops. Will need to investigate further on mobile.

--- a/resources/assets/sass/_mycss.scss
+++ b/resources/assets/sass/_mycss.scss
@@ -38,7 +38,7 @@ body {
   
 }
 .mycontainer{
-  padding-top:150px;
+  padding-top:80px;
 }
 
 .textbg{
